--- a/submission.mkd
+++ b/submission.mkd
@@ -1,16 +1,208 @@
-# Hardware and software for single-molecule fluorescence analysis
 
-We present a suite of tools for the collection and analysis of
-fluorescence spectroscopy data.  While fluorescence techniques have in
-recent years enabled a variety of biologically relevant measurements
-[@iqbal2008orientation; @Vafabakhsh2012; @Andrec2003], the lack of a common
+
+# Motivation
+- what is FRET, why should people care about FRET?
+- what research advances were made available with FRET analyses?
+
+In recent years, fluorescence techniques have enabled a variety of biologically relevant measurements, such as XX, 
+[@iqbal2008orientation], YY, [@Vafabakhsh2012], and ZZ [@Andrec2003]. However, the lack of a common
 high-quality analysis toolkit has hindered reproducibility and
 substantially raised the barrier to entry for these tools.
+ 
+
+- what are the particular difficulties when working with FRET (restrict to those that you are solving)? E.g. lots of unknowns that should be estimated from the data
+- why does probabilistic inference help with FRET analysis? Where does it come in? (connection to the issues of working with FRET)
+- why are currently available FRET-turnkey systems not sufficient?
+- E.g. sometimes you want photons binned, sometimes not. If your turnkey system only provides binned data - you are limited.
+
+# Contribution
+
+## this motivates why you build your own hardware for fast acquisition of photons, made available as open hardware, with appropriate software bindings
+## Point towards the two key probabilistic inference methods that you provide: mixture model and burst detection - essential for any follow up inferences.
+## Explain that many other problem specific inferences are possible - pick one toy example where you already have data analyzed with.
+
 
 Our package includes hardware and software for experimental data
 collection, as well as a diverse set of tools for manipulating the
 resulting dataset. Finally, we include a set of tools for robust
 analysis of a data from a few common fluorescence experiments.
+
+# Hardware and Acquisition software for single-molecule fluorescence analysis
+
+
+## Hardware for experimental data collection
+
+In order to enable/support/guarantee ......, we develop a fast photon timestamping device.
+This device takes the output signals from each of
+the detector modules and records a timestamp for each photon detection
+event. Despite the relatively simple requirements for this device, we
+found a remarkable gap in the capabilities of the commerically
+available hardware.
+
+While Time-Correlated Single Photon Counting (TCSPC) modules offer
+extremely high resolution timestamps (~10 picosecond), they
+cost tens of thousands of dollars, far more than our comparatively
+relaxed timing requirements justify.  This leaves many labs to use
+inexpensive hardware correlators which produce a coarsely binned
+intensity signal. Furthermore, neither of these devices are flexible
+enough to accommodate recent variations of these experients
+[@lee2005; @seidel2008].
+
+We developed [@gamari2012] a set of firmware for simple, extensible timetagging
+functionality on a readily available FPGA
+[development board](http://www.knjn.com/FPGA-FX2.html). The instrument
+is easy to build with complete
+[build instructions](http://goldnerlab.physics.umass.edu/wiki/FpgaTimeTagger?action=AttachFile&do=view&target=construction.pdf). Furthermore,
+the instrument includes an event sequencer which can be used for FRET
+variants requiring excitation laser switching [@Kapanidis2005]. The
+Verilog [sources](http://github.com/bgamari/timetag-fpga) are
+well-[documented](http://github.com/bgamari/timetag-fpga/tree/master/docs)
+and structured to allow for easy adaptation for new experimental
+techniques.
+
+## Software for data acquisition
+
+The hardware is integrated into our software suite with general purpose bindings for the Linux operating system.
+
+These low-level tools can be found in the package 
+`timetag-tools`
+[package](http://github.com/bgamari/timetag-tools). In addition to
+low-level utilities for manipulating data collected by the instrument,
+the package provides a user-friendly graphical interface for
+interacting with the hardware. The `timetag_ui` interface provides
+control over the basic functionality of the hardware, as well several
+monitors showing facets of the incoming data. These include real-time
+monitors of an approximate FRET efficiency histogram, the correlation
+function, as well as the photon counting histogram, and bin counts.
+
+![The `timetag_ui` interface during data acquisition](timetag-ui.png)
+
+This interface makes it straightforward to setup and acquire
+fluorescence data. While the tools should run in any POSIX-compliant
+environment, the installation [instructions][timetag-tutorial] provide step-by-step
+instructions for installation on Ubuntu Linux.
+
+The package also provides a set of low-level command-line utilities
+for slicing, filtering, converting, and other basic manipulations of
+timetag data.
+
+
+## Software package for FRET data analysis
+
+The `photon-tools` package provides a set of Python utilities and
+libraries for manipulating and analyzing photon data. The utilities
+support a variety of file formats including our hardware's `.timetag`
+format and the Picoharp `.pt2` format. These utilities include
+an extensive [tutorial][photon-tools docs] as well as comprehensive
+Python docstrings.
+
+The `fcs-corr` utility provides a convenient way to compute and plot
+correlation functions of timestamp data. The `fcs-fit` utility takes
+one or more correlation functions produced by `fcs-corr` and allows
+the user to fit the data collectively to any of a number of physical
+models. The tool supports parameter-tying over multiple datasets and
+produces a variety of diagnostic statistics and goodness-of-fit
+metrics.
+
+The `hphoton` package provides the `fret-analysis` and `alex-analysis`
+tools for analysis of FRET and FRET with Alternating Laser Excitation
+(ALEX) data. These programs support for the major corrections
+necessary for inferring quantitatively accurate FRET
+efficiencies. Moreover, the programs emit both human-readable HTML
+providing a suscint summary of each dataset, as well as machine
+readable results.
+
+![The output of the `fret-analysis` tool showing a FRET dataset with two populations](fret-analysis.png)
+
+The programs use approximate inference (Gibbs sampling) to infer a
+Beta mixture model over the resulting FRET efficiency histogram,
+allowing accurate separation of multiple species within a dataset.
+
+Furthermore, we provide a novel Bayesian burst detection scheme for
+extracting fluorescence bursts from solution FRET experiments. In
+contrast to existing inference methods which rely on a binned
+reduction of the photon arrivals, our approach exploits the
+exponential distribution of Poissonian interarrival times in
+conjunction with an assumption of time continuity. This allows bursts
+of small than one bin width (a common occurrence in solution FRET
+experiments) to be examined while minimizing the effect of background.
+
+
+ 
+
+
+
+# Probabilistic Inference with bayes-stack
+
+
+
+Along with the hardware and various software tools described above, we
+provide `bayes-stack`, a general-purpose framework for
+high-performance for scalable inference with Markov chain Monte Carlo methods.
+
+
+
+
+# Interoperability with other Biostats packages
+
+## VB-FRET
+....
+
+## OpenBUGS
+(We can also crank out a export function to OpenBUGS)
+
+
+## you had another one
+
+
+
+
+
+
+
+# Example analysis: RNA 16-mer labelled terminally with Cy3 and C5 dyes
+
+Todo: Problem, Approach, Experiments, Conclusion
+
+In the submission package we have provided a dataset for a
+single-molecule fluorescence experiment taken with our timetagger
+hardware. The dataset \footnote{experimental data due to Peker Milas of
+the Goldner group} examines an RNA 16-mer labelled terminally with Cy3
+and C5 dyes.
+
+
+
+
+
+
+
+
+
+
+
+# Future Work
+
+
+
+
+## even faster time tagger
+
+50 ps
+
+## high-level probabilistic inferences for XXXX field
+
+- high level probabilistic inferences for sub field FRET analysis (e.g. RNA/DNA analysis, or the bubble experiment)
+
+## combination of FRET and X-Ray defraction experiments
+
+(or other ensemble methods)
+
+
+
+
+
+----------------------------------------------------
+
 
 ## Fluorescence spectroscopy
 
@@ -68,115 +260,9 @@ anomalous, each exhibiting a distinct functional form.
 In conjunction with FRET, one can gain deep insights into dynamics on
 the molecular scale [@Nettels2008].
 
-## Hardware for experimental data collection
-
-The heart? of a single-molecule fluorescence experiment is the photon
-timestamping device. This device takes the output signals from each of
-the detector modules and records a timestamp for each photon detection
-event. Despite the relatively simple requirements for this device, we
-found a remarkable gap in the capabilities of the commerically
-available hardware.
-
-While Time-Correlated Single Photon Counting (TCSPC) modules offer
-extremely high resolution timestamps (~10 picosecond), they
-cost tens of thousands of dollars, far more than our comparatively
-relaxed timing requirements justify.  This leaves many labs to use
-inexpensive hardware correlators which produce a coarsely binned
-intensity signal. Furthermore, neither of these devices are flexible
-enough to accommodate recent variations of these experients
-[@lee2005; @seidel2008].
-
-We developed [@gamari2012] a set of firmware for simple, extensible timetagging
-functionality on a readily available FPGA
-[development board](http://www.knjn.com/FPGA-FX2.html). The instrument
-is easy to build with complete
-[build instructions](http://goldnerlab.physics.umass.edu/wiki/FpgaTimeTagger?action=AttachFile&do=view&target=construction.pdf). Furthermore,
-the instrument includes an event sequencer which can be used for FRET
-variants requiring excitation laser switching [@Kapanidis2005]. The
-Verilog [sources](http://github.com/bgamari/timetag-fpga) are
-well-[documented](http://github.com/bgamari/timetag-fpga/tree/master/docs)
-and structured to allow for easy adaptation for new experimental
-techniques.
-
-## Tools for data acquisition
-
-The hardware described above is complemented with a set of tools in
-the `timetag-tools`
-[package](http://github.com/bgamari/timetag-tools). In addition to
-low-level utilities for manipulating data collected by the instrument,
-the package provides a user-friendly graphical interface for
-interacting with the hardware. The `timetag_ui` interface provides
-control over the basic functionality of the hardware, as well several
-monitors showing facets of the incoming data. These include real-time
-monitors of an approximate FRET efficiency histogram, the correlation
-function, as well as the photon counting histogram, and bin counts.
-
-![The `timetag_ui` interface during data acquisition](timetag-ui.png)
-
-This interface makes it straightforward to setup and acquire
-fluorescence data. While the tools should run in any POSIX-compliant
-environment, the installation [instructions][timetag-tutorial] provide step-by-step
-instructions for installation on Ubuntu Linux.
-
-The package also provides a set of low-level command-line utilities
-for slicing, filtering, converting, and other basic manipulations of
-timetag data.
-
-## Tools for data analysis
-
-The `photon-tools` package provides a set of Python utilities and
-libraries for manipulating and analyzing photon data. The utilities
-support a variety of file formats including our hardware's `.timetag`
-format and the Picoharp `.pt2` format. These utilities include
-an extensive [tutorial][photon-tools docs] as well as comprehensive
-Python docstrings.
-
-The `fcs-corr` utility provides a convenient way to compute and plot
-correlation functions of timestamp data. The `fcs-fit` utility takes
-one or more correlation functions produced by `fcs-corr` and allows
-the user to fit the data collectively to any of a number of physical
-models. The tool supports parameter-tying over multiple datasets and
-produces a variety of diagnostic statistics and goodness-of-fit
-metrics.
-
-The `hphoton` package provides the `fret-analysis` and `alex-analysis`
-tools for analysis of FRET and FRET with Alternating Laser Excitation
-(ALEX) data. These programs support for the major corrections
-necessary for inferring quantitatively accurate FRET
-efficiencies. Moreover, the programs emit both human-readable HTML
-providing a suscint summary of each dataset, as well as machine
-readable results.
-
-![The output of the `fret-analysis` tool showing a FRET dataset with two populations](fret-analysis.png)
-
-The programs use approximate inference (Gibbs sampling) to infer a
-Beta mixture model over the resulting FRET efficiency histogram,
-allowing accurate separation of multiple species within a dataset.
-
-Furthermore, we provide a novel Bayesian burst detection scheme for
-extracting fluorescence bursts from solution FRET experiments. In
-contrast to existing inference methods which rely on a binned
-reduction of the photon arrivals, our approach exploits the
-exponential distribution of Poissonian interarrival times in
-conjunction with an assumption of time continuity. This allows bursts
-of small than one bin width (a common occurrence in solution FRET
-experiments) to be examined while minimizing the effect of background.
-
-### An example exercise
-
-In the submission package we have provided a dataset for a
-single-molecule fluorescence experiment taken with our timetagger
-hardware. The dataset \footnote{experimental data due to Peker Milas of
-the Goldner group} examines an RNA 16-mer labelled terminally with Cy3
-and C5 dyes.
 
 
-## A framework for approximate Bayesian inference
 
-Along with the hardware and various software tools described above, we
-provide `bayes-stack`, a general-purpose framework for
-high-performance approximate inference on probabilistic models. This
-framework
 
 # Notes
 
@@ -186,6 +272,8 @@ framework
  * burst detection?
  * particle tracking?
  * verify repositories have properly licensed
+
+
 
 
 [timetag-tutorial]: http://goldnerlab.physics.umass.edu/wiki/FpgaTimeTagger?action=AttachFile&do=view&target=construction.pdf
